# 0018-sdk-mock

./: .gitignore  Cargo.toml  README.md  mock_keys.toml  sdf.h
docs/: api.html  config.html  guide.html  index.html  integration-guide.md
examples/c_caller/: Makefile  main.c
examples/demos/: Makefile  config.toml  demo_auth  demo_auth.c  demo_confidential  demo_confidential.c  demo_integrity  demo_integrity.c
src/: error_code.rs  lib.rs  logging.rs  types.rs
src/config/: app_config.rs  mock_config.rs  mod.rs
src/crypto/: mod.rs  random.rs  sm2_ops.rs  sm3_ops.rs  sm4_ops.rs
src/ffi/: crypto_ffi.rs  device_ffi.rs  file_ffi.rs  helpers.rs  key_ffi.rs  mod.rs
src/key_mgr/: key_store.rs  mod.rs  session.rs
src/sdf_impl/: asymmetric.rs  device.rs  file_ops.rs  hash.rs  key_manage.rs  mod.rs  symmetric.rs
tests/: integration_test.rs
